<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_chat"/>
    <item
        android:id="@+id/nav_learning"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_learning"/>
    <item
        android:id="@+id/nav_evolution"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_evolution"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings"/>
</menu>
